--- a/package.json
+++ b/package.json
@@ -9,34 +9,33 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@mui/material": "5.0.3",
-    "@mui/icons-material": "5.0.3",
-    "@mui/lab": "5.0.0-alpha.50",
-    "@mui/styles": "5.0.1",
-    "@types/nprogress": "0.2.0",
-    "@types/react": "17.0.25",
-    "@types/react-dom": "17.0.9",
-    "@types/react-router-dom": "5.3.0",
-    "chart.js": "2.9.4",
-    "clsx": "1.1.1",
-    "date-fns": "2.25.0",
-    "history": "5.0.1",
-    "nprogress": "0.2.0",
-    "numeral": "2.0.6",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-custom-scrollbars-2": "4.4.0",
-    "react-dom": "17.0.2",
-    "react-helmet-async": "1.1.2",
-    "react-router": "6.0.0-beta.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "4.0.3",
-    "stylis": "4.0.10",
-    "stylis-plugin-rtl": "2.1.0",
-    "react-chartjs-2": "2.11.1",
-    "web-vitals": "2.1.2"
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/lab": "^5.0.0-alpha.71",
+    "@mui/material": "^5.4.4",
+    "@mui/styles": "^5.4.4",
+    "@types/nprogress": "^0.2.0",
+    "chart.js": "^2.9.4",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "history": "^5.3.0",
+    "material-ui-phone-number": "^3.0.0",
+    "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.2",
+    "react-custom-scrollbars-2": "^4.4.0",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.3",
+    "react-pin-input": "^1.0.1",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^4.0.3",
+    "stylis": "^4.0.13",
+    "stylis-plugin-rtl": "^2.1.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,24 +61,25 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.15.8",
-    "@types/numeral": "2.0.2",
-    "@types/react": "17.0.29",
-    "@types/react-dom": "17.0.9",
-    "@types/react-router-dom": "5.3.1",
-    "@typescript-eslint/eslint-plugin": "5.0.0",
-    "@typescript-eslint/parser": "5.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-airbnb-typescript": "14.0.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.4.1",
-    "typescript": "4.4.4",
-    "node-sass": "6.0.1"
+    "@babel/eslint-parser": "^7.17.0",
+    "@types/numeral": "^2.0.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.12",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.2",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.5.1",
+    "react-error-overlay": "^6.0.9",
+    "typescript": "^4.6.2"
   }
 }
