--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.4.4",
     "@mui/styles": "^5.4.4",
     "@types/nprogress": "^0.2.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "connected-react-router": "^6.9.2",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
     "material-ui-phone-number": "^3.0.0",
@@ -29,10 +31,15 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-multi-toggle": "^1.1.0",
     "react-pin-input": "^1.0.1",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "stylis": "^4.0.13",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4"
@@ -75,6 +82,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "^6.0.1",
