--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,23 +6,28 @@
   "short_name": "Snackr - Vendor",
   "name": "Snackr - Vendor",
   "icons": [
-    {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
+  	{
+      "src": "/icon_24.png",
+      "sizes": "24x24",
       "type": "image/png"
     },
     {
-      "src": "/icon-256x256.png",
-      "sizes": "256x256",
+      "src": "/icon_48.png",
+      "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "/icon_72.png",
+      "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icon_96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
