--- a/package.json
+++ b/package.json
@@ -16,17 +16,14 @@
     "@mui/material": "^5.4.4",
     "@mui/styles": "^5.4.4",
     "@types/nprogress": "^0.2.0",
-    "bootstrap": "^5.1.3",
     "chart.js": "^2.9.4",
-    "clsx": "^1.1.1",
-    "connected-react-router": "^6.9.2",
     "date-fns": "^2.28.0",
-    "history": "^5.3.0",
     "material-ui-phone-number": "^3.0.0",
     "nprogress": "^0.2.0",
-    "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-chartjs-2": "^2.11.2",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
@@ -39,10 +36,7 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "stylis": "^4.0.13",
-    "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
