--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nprogress": "^0.2.0",
     "chart.js": "^2.9.4",
     "date-fns": "^2.28.0",
+    "env-cmd": "^10.1.0",
     "material-ui-phone-number": "^3.0.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
@@ -42,7 +43,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:staging": "env-cmd -f .env.staging react-scripts build"
   },
   "eslintConfig": {
     "extends": [
