--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_API_ENDPOINT = "https://snackr-backend-dev.herokuapp.com/api/v1/"
+REACT_APP_BASE_URL = "https://snackr-backend-dev.herokuapp.com/api/v1/"
