--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_ENDPOINT = "https://snackr-backend-prod.herokuapp.com/api/v1/"
+REACT_APP_BASE_URL = "https://snackr-backend-prod.herokuapp.com/api/v1/"
