--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:admin": "env-cmd -f .env.admin react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "build:staging": "env-cmd -f .env.staging react-scripts build"
+    "build:admin": "env-cmd -f .env.admin react-scripts build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build:admin-staging": "env-cmd -f .env.staging-admin react-scripts build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
