--- a/package.json
+++ b/package.json
@@ -79,15 +79,17 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.2",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "redux-logger": "^3.0.6",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.5.1",
     "react-error-overlay": "^6.0.9",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.6.2"
   }
 }
