--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "typeface-roboto": "^1.1.13"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "start:admin": "env-cmd -f .env.admin react-scripts start",
     "build": "react-scripts build",
     "build:admin": "env-cmd -f .env.admin react-scripts build",
